--- a/alb-art.css
+++ b/alb-art.css
@@ -128,7 +128,7 @@ p::-moz-selection {
 
 body {
     margin: 0;
-    font-family: Helvetica, Arial, 'open sans', sans-serif;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: light-dark(#333333, #E0E0E0);
     background-color: light-dark(#F5F5F5, #1E1E1E);
 }
